@@ -90,7 +90,11 @@
 
 #include "thbrk/thbrk-priv.h"
 
-__attribute__ ((destructor)) void
+
+#if defined (__GNUC__) || defined (__clang__)
+__attribute__((destructor))
+#endif
+void
 _libthai_on_unload ()
 {
     brk_free_shared_brk ();
